--- a/action.yml
+++ b/action.yml
@@ -8,21 +8,32 @@ inputs:
   FILES_BINDINGS:
     description: "Line-separated list of files bindings that should be trigger updates"
     required: true
-  GITHUB_TOKEN:
-    description: "Line-separated list of files bindings that should be trigger updates"
-    required: true
   DRY_RUN:
     description: "Dry run switch: set to false to create for real pull requests"
     default: 'true'
+  GITHUB_TOKEN:
+    description: "Line-separated list of files bindings that should be trigger updates"
+    required: true
+  GITHUB_URL:
+    description: "The domain of the Github instance hosting your repository"
+    default: "github.com"
   COMMIT_MESSAGE:
     description: "Line-separated list of files bindings that should be trigger updates"
-    default: "sync from https://github.com/FATMAP/github-file-sync/releases/tag/${{ github.ref_name }}"
+    default: "sync-file-pr from https://github.com/FATMAP/github-file-sync/releases/tag/${{ github.ref_name }}"
+  FILE_SYNC_BRANCH_REGEXP:
+    description: "Regexp string used to determine if an existing file sync pull request already exists. Update it if found instead of creating a new one."
+    default: "[0-9]{4}-[0-9]{2}-[0-9]{2}-sync-file-pr.*"
+  WORKSPACE:
+    description: "folder for the runner to store temporary files"
+    default: "/tmp"
 runs:
   using: docker
   image: ./git-file-sync/Dockerfile
   env:
     REPOSITORIES: ${{ inputs.REPOSITORIES }}
     FILES_BINDINGS: ${{ inputs.FILES_BINDINGS }}
-    GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
     DRY_RUN: ${{ inputs.DRY_RUN }}
+    GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
+    GITHUB_URL: ${{ inputs.GITHUB_URL }}
     COMMIT_MESSAGE: ${{ inputs.COMMIT_MESSAGE }}
+    WORKSPACE: ${{ inputs.WORKSPACE }}
