--- a/action.yml
+++ b/action.yml
@@ -19,10 +19,10 @@ inputs:
     default: "github.com"
   COMMIT_MESSAGE:
     description: "Commit message"
-    default: "sync-file-pr from https://github.com/FATMAP/github-file-sync/releases/tag/${{ github.ref_name }}"
+    default: "minor CHORE file synchronization from a gha-file-sync action"
   PR_TITLE:
     description: "The title of the sync PR"
-    default: "minor FEAT gha-file-sync from ${{ github.ref_name }}"
+    default: "minor CHORE file synchronization from a gha-file-sync action"
   FILE_SYNC_BRANCH_REGEXP:
     description: "Regexp string used to determine if an existing file sync pull request already exists. Update it if found instead of creating a new one."
     default: "[0-9]{4}-[0-9]{2}-[0-9]{2}-sync-file-pr.*"
