rename git-file-sync to github-file-sync considering the coupling

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: git-file-sync
+name: github-file-sync
 author: "SlevinWasAlreadyTaken"
 description: "Help to synchronize files between repositories by opening pull requests."
 inputs:
